# browser-copilot

./: .gitignore  AgentThinking.md  ThinkingCopilot.md
agent-thinking/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  sample.env
agent-thinking/gpt_agent/: api.py  domain.py  gemini.py
agent-thinking/gpt_agent/assets/: manifest.json
agent-thinking/gpt_agent/services/: gemini_agent.py  openai_agent.py
agent-thinking/tests/: api_validation.py  conftest.py  test_api.py  test_api_validation.py  test_gemini_agent.py  test_openai_agent.py
browser-extension/: jest.config.js  package.json  pnpm-lock.yaml  vitest.config.ts
browser-extension/src/components/: AddCopilotModal.vue  AlertNotification.vue  ChatInput.vue  CopilotChat.vue  Message.vue  ThoughtProcess.vue
browser-extension/src/pages/: Index.vue
browser-extension/src/scripts/: agent-repository.ts  agent-session.ts  agent.ts  flow.ts  http.ts  tab-state.ts
browser-extension/tests/: ChatInput.test.ts  Message.test.ts  ThoughtProcess.test.ts  agent.test.ts  http.test.ts  integration.test.ts  setup.ts  streaming.test.ts
