[tool.poetry]
name = "gpt_agent"
version = "0.1"
description = ""
authors = []
readme = "README.md"
packages = [{ include = "gpt_agent"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
#pydantic = ">2.0"
fastapi = "~=0.114"
uvicorn = "~=0.23"
aiofiles = "~=23.2"
google-genai = ">=1.25.0"
google-api-python-client = ">=2.175.0"
langchain = ">=0.3.10"
langchain-community = ">=0.3.10"
openai = "~=1.7"
httpx = ">=0.28.1,<1.0.0"
python-dotenv = "~=1.0"
sse-starlette = "^1.8.1"
python-jose = "^3.3.0"
jinja2 = "^3.1.2"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "~=7.4"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.12.0"
httpx = ">=0.28.1,<1.0.0"
respx = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"